// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a regular file 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="source-viewer-header-component flex-1"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-with-icon"
          href="/dashboard?id=my-project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="FIL"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <Link
            className="js-new-window"
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to={
              Object {
                "pathname": "/code",
                "query": Object {
                  "id": "my-project",
                  "line": undefined,
                  "selected": "foo",
                },
              }
            }
          >
            component_viewer.new_window
          </Link>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=foo"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;

exports[`should render correctly for a unit test 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="source-viewer-header-component flex-1"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-with-icon"
          href="/dashboard?id=my-project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="UTS"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="display-flex-center"
  >
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.tests.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        12
      </span>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <Link
            className="js-new-window"
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to={
              Object {
                "pathname": "/code",
                "query": Object {
                  "id": "my-project",
                  "line": undefined,
                  "selected": "foo",
                },
              }
            }
          >
            component_viewer.new_window
          </Link>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=foo"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;

exports[`should render correctly if issue details are passed 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="source-viewer-header-component flex-1"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-with-icon"
          href="/dashboard?id=my-project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="FIL"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="display-flex-center"
  >
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.lines.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        56
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.coverage.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        85.2%
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        duplications
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        1.0%
      </span>
    </div>
    <div
      className="source-viewer-header-measure-separator"
    />
    <div
      className="source-viewer-header-measure"
      key="BUG"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.BUG
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "fileUuids": "foo-bar",
                "id": "my-project",
                "resolved": "false",
                "types": "BUG",
              },
            }
          }
        >
          0
        </Link>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="VULNERABILITY"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.VULNERABILITY
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "fileUuids": "foo-bar",
                "id": "my-project",
                "resolved": "false",
                "types": "VULNERABILITY",
              },
            }
          }
        >
          2
        </Link>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="CODE_SMELL"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.CODE_SMELL
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "fileUuids": "foo-bar",
                "id": "my-project",
                "resolved": "false",
                "types": "CODE_SMELL",
              },
            }
          }
        >
          1
        </Link>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="SECURITY_HOTSPOT"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.SECURITY_HOTSPOT
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "fileUuids": "foo-bar",
                "id": "my-project",
                "resolved": "false",
                "types": "SECURITY_HOTSPOT",
              },
            }
          }
        >
          2
        </Link>
      </span>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <Link
            className="js-new-window"
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to={
              Object {
                "pathname": "/code",
                "query": Object {
                  "id": "my-project",
                  "line": undefined,
                  "selected": "foo",
                },
              }
            }
          >
            component_viewer.new_window
          </Link>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=foo"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;
